--- a/css/cartoon-hero-styles.css
+++ b/css/cartoon-hero-styles.css
@@ -117,12 +117,26 @@ footer {
 /* uravity */
 li.friend-img-uravity {
   background: none;
-  transition: 1.5s ease-in-out;
-
+  transition: all 0.5s ease-in-out;
 }
 
 li.friend-img-uravity:hover {
-  transform:rotate(360deg);
+  transform: translate(0px, -20%);
+  /* transform:rotate(360deg); */
+}
+li.friend-img-uravity:hover {
+
+    -webkit-animation-name: thumb;
+    -webkit-animation-duration: 1000ms;
+    -webkit-transform-origin:50% 50%;
+    -webkit-animation-iteration-count: infinite; /* The magic keyword for infinite*/
+    -webkit-animation-timing-function: linear;
+}
+
+@-webkit-keyframes thumb {
+    0% { -webkit-transform: rotate(3deg), transform: translate(0px, -20%); }
+    50% { -webkit-transform: rotate(-3deg); }
+    100% { -webkit-transform: rotate(3deg), transform: translate(0px, 20%); }
 }
 
 /* deku */
