--- a/css/cartoon-hero-styles.css
+++ b/css/cartoon-hero-styles.css
@@ -5,6 +5,7 @@ body {
   margin-top: auto;
   font-family: 'Staatliches', cursive;
   color: darkgreen;
+  display:block;
 }
 
 body a {
@@ -16,6 +17,26 @@ body a {
 body a:hover {
   color: white;
 }
+body ul{
+  list-style-type: none;
+}
+
+/* NAV BAR (OPTIONAL) - make sure to change header img{margin-top:50px} */
+ /* div.nav {
+   background-color: darkgreen;
+   position: fixed;
+   z-index: 10;
+   width: 100%;
+   margin-top:auto;
+   text-align: justify;
+   display: block;
+   list-style: none;
+ }
+
+div nav ul li{
+  padding: 0px 30px;
+  margin-left: 0px auto;
+} */
 
 header {
   background-color: darkgreen;
@@ -28,6 +49,7 @@ header img {
   border-radius: 50%;
   border: 5px solid #F1E853;
   padding: 10px 10px;
+   margin-top: 10px;/*change if you want nav bar */
 }
 
 header h1 {
@@ -57,6 +79,8 @@ main ul li {
   padding: 10px 10px;
 }
 
+
+
 .about-img{
   background:white;
   transition: 0.3s ease-in-out;
@@ -76,6 +100,7 @@ h2 {
 div ul li {
   text-align: center;
   font-size: 20px;
+
 }
 
 div.friends p {
@@ -91,6 +116,7 @@ p {
 
 p.caption {
   color: gray;
+  opacity: 70%;
   font-style: italic;
   margin-top: 0px;
   text-align: right;
